CMAKE_MINIMUM_REQUIRED( VERSION 2.8 ) 
PROJECT( hnode2-management-device ) 

SET( MAJOR_VERSION 2 )
SET( MINOR_VERSION 2 )
SET( PATCH_VERSION 0 )
SET( RELEASE_VERSION 0 )

SET( DAEMON_NAME hnmgmtd )

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake) 

# Default the install prefix to just /usr
IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET( CMAKE_INSTALL_PREFIX /usr CACHE PATH "Default to /usr install" FORCE )
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

SET( VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} )
SET( DEBVERSION ${VERSION}-${RELEASE_VERSION} )

ADD_DEFINITIONS( -DVERSION=${VERSION} )

SET( HNMGMTD_SRC
     ${CMAKE_SOURCE_DIR}/src/daemon/hnmgmtd.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNSCGISink.cpp    
     ${CMAKE_SOURCE_DIR}/src/daemon/HNMgmtProxy.cpp     
     ${CMAKE_SOURCE_DIR}/src/daemon/HNManagementDevice.cpp
     ${CMAKE_SOURCE_DIR}/src/daemon/HNManagedDeviceArbiter.cpp
)

SET(CMAKE_BUILD_TYPE Debug)

FIND_PACKAGE( Poco REQUIRED Foundation Net NetSSL JSON )
FIND_PACKAGE( HNode2 REQUIRED )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src/include )

ADD_EXECUTABLE( hnmgmtd ${HNMGMTD_SRC} )
TARGET_LINK_LIBRARIES( hnmgmtd PRIVATE 
    ${Poco_Util_LIBRARY}
    ${Poco_Foundation_LIBRARY}
    ${Poco_Net_LIBRARY}
    ${Poco_NetSSL_LIBRARY}
    ${Poco_JSON_LIBRARY}
)
TARGET_LINK_LIBRARIES( hnmgmtd PRIVATE HNode2::common )

INSTALL( TARGETS hnmgmtd DESTINATION ${CMAKE_INSTALL_PREFIX}/sbin COMPONENT daemon )

#CONFIGURE_FILE( ${CMAKE_SOURCE_DIR}/pkg/hnswitchd.service.in ${CMAKE_BINARY_DIR}/hnswitchd.service @ONLY )
#INSTALL( FILES ${CMAKE_BINARY_DIR}/hnswitchd.service DESTINATION /etc/systemd/system/ COMPONENT daemon )

SET( CPACK_GENERATOR "DEB" )

SET( CPACK_DEB_COMPONENT_INSTALL 1 )
SET( CPACK_COMPONENTS_ALL daemon client dev )

SET( CPACK_PACKAGE_VERSION_MAJOR ${MAJOR_VERSION} )
SET( CPACK_PACKAGE_VERSION_MINOR ${MINOR_VERSION} )
SET( CPACK_PACKAGE_VERSION_PATCH ${PATCH_VERSION} )

SET( CPACK_PACKAGE_DESCRIPTION "An HNode2 device implementing management aggregation for other hnode2 devices." )
SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY "The hnode2 management device." )
SET( CPACK_PACKAGE_CONTACT "Curtis Nottberg" )
SET( CPACK_PACKAGE_ARCHITECTURE DEB-DEFAULT )

SET( CPACK_DEBIAN_PACKAGE_PRIORITY "optional" )
SET( CPACK_DEBIAN_PACKAGE_SECTION "Daemon" )
SET( CPACK_DEBIAN_PACKAGE_MAINTAINER "Curtis Nottberg" ) #required
SET( CPACK_DEBIAN_PACKAGE_VERSION ${DEBVERSION} )
SET( CPACK_DEBIAN_FILE_NAME DEB-DEFAULT )

INCLUDE(CPack)

